# rustToDoList

./: Cargo.toml  README.md  tarefas.json  tarpaulin-report.html
src/: main.rs
src/entradasaida/: Cargo.toml  tarefas.json
src/entradasaida/src/: lib.rs
src/entradasaida/tests/: tests.rs
src/listadetarefas/: Cargo.toml  tarefas.json  test.json
src/listadetarefas/src/: lib.rs
src/listadetarefas/tests/: tests.rs
src/mock/src/: lib.rs
tests/: entradasaidatests.rs  listadetarefastests.rs  mockertests.rs
