workspace = { members = [ "src/entradasaida","src/listadetarefas", "src/mock"] }
[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
listadetarefas = {path = "src/listadetarefas"}
entradasaida = {path = "src/entradasaida"}
